<resources>
	<string name="app_name">Smartpad</string>
	<string name="sensor_unreadable">Unable to read data from sensor!</string>
	<string name="sensor_usage">Using sensor:</string>
	<string name="sensor_usage_non">No usable sensor found!</string>
	<string name="sensor_delay">Sensor delay (microseconds)</string>
	<string name="sensor_delay_fastest">Fastest (~0)</string>
	<string name="sensor_delay_game">Game (~20000)</string>
	<string name="sensor_delay_ui">UI (~66667)</string>
	<string name="sensor_delay_normal">Normal (~200000)</string>
	<string name="destination_host">Destination host</string>
	<string name="destination_port">Destination port</string>
	<string name="unable_to_parse_integer">Unable to parse port</string>
	<string name="invalid_host">Invalid host</string>
	<string name="invalid_port">Invalid port</string>
	<string name="streaming_to">Streaming to</string>
	<string name="stop">Stop</string>
</resources>
