<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context=".SetupActivity">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar android:id="@+id/toolbar"
		                                   android:layout_width="match_parent"
		                                   android:layout_height="?attr/actionBarSize"
		                                   android:background="?attr/colorPrimary"
		                                   app:popupTheme="@style/AppTheme.PopupOverlay" />
	</android.support.design.widget.AppBarLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout android:id="@+id/container"
		              android:layout_width="match_parent"
		              android:layout_height="match_parent"
		              android:orientation="vertical"
		              android:paddingBottom="@dimen/activity_vertical_margin"
		              android:paddingLeft="@dimen/activity_horizontal_margin"
		              android:paddingRight="@dimen/activity_horizontal_margin"
		              android:paddingTop="@dimen/activity_vertical_margin">

			<LinearLayout android:id="@+id/setup"
			              android:layout_width="match_parent"
			              android:layout_height="match_parent"
			              android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/sensor_delay" />

				<RadioGroup android:id="@+id/sensor_delay"
				            android:layout_width="match_parent"
				            android:layout_height="wrap_content"
				            android:orientation="vertical">

					<RadioButton android:id="@+id/sensor_delay_fastest"
					             android:layout_width="wrap_content"
					             android:layout_height="wrap_content"
					             android:text="@string/sensor_delay_fastest" />

					<RadioButton android:id="@+id/sensor_delay_game"
					             android:layout_width="wrap_content"
					             android:layout_height="wrap_content"
					             android:text="@string/sensor_delay_game" />

					<RadioButton android:id="@+id/sensor_delay_ui"
					             android:layout_width="wrap_content"
					             android:layout_height="wrap_content"
					             android:text="@string/sensor_delay_ui" />

					<RadioButton android:id="@+id/sensor_delay_normal"
								 android:layout_width="wrap_content"
								 android:layout_height="wrap_content"
								 android:text="@string/sensor_delay_normal" />
				</RadioGroup>

				<EditText android:id="@+id/destination_host"
				          android:layout_width="match_parent"
				          android:layout_height="wrap_content"
				          android:hint="@string/destination_host"
				          android:inputType="textUri" />

				<EditText android:id="@+id/destination_port"
				          android:layout_width="match_parent"
				          android:layout_height="wrap_content"
				          android:hint="@string/destination_port"
				          android:inputType="number" />
			</LinearLayout>

			<LinearLayout android:id="@+id/running"
			              android:layout_width="match_parent"
			              android:layout_height="match_parent"
			              android:orientation="vertical">

				<TextView android:id="@+id/info"
				          android:layout_width="match_parent"
				          android:layout_height="wrap_content" />
			</LinearLayout>
		</LinearLayout>

		<RelativeLayout android:id="@+id/waiting"
		                android:layout_width="match_parent"
		                android:layout_height="match_parent">

			<ProgressBar
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true" />
		</RelativeLayout>
	</RelativeLayout>

	<android.support.design.widget.FloatingActionButton android:id="@+id/start"
	                                                    android:layout_width="wrap_content"
	                                                    android:layout_height="wrap_content"
	                                                    android:layout_gravity="bottom|end"
	                                                    android:layout_margin="@dimen/fab_margin"
	                                                    android:src="@android:drawable/ic_media_play" />

	<android.support.design.widget.FloatingActionButton android:id="@+id/stop"
	                                                    android:layout_width="wrap_content"
	                                                    android:layout_height="wrap_content"
	                                                    android:layout_gravity="bottom|end"
	                                                    android:layout_margin="@dimen/fab_margin"
	                                                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
</android.support.design.widget.CoordinatorLayout>
